appId: com.fegcontextflow
---
- launchApp
- assertVisible: "TOP OFFER"
- assertVisible: "Chelsea"
- tapOn:
    id: "voice-panel-button"
- tapOn:
    id: "increase-button"
- assertVisible: "1"
